fixed mobile view/alignment

--- a/CSS/light.css
+++ b/CSS/light.css
@@ -150,8 +150,8 @@ nav{
 }
 
 .about-me-list{
-    max-width: 600px;
-    min-width: 600px;
+    max-width: 750px;
+    min-width: 750px;
     margin: 0 auto;
     margin-top: 50px;
   
